language/move-lang/tests/move_check/parser/expr_while_missing_parens.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/expr_while_missing_parens.move:4:15
  │
4 │         while v < 3 { v = v + 1 }
  │               ^
  │               │
  │               Unexpected 'v'
  │               Expected '('

